sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:20: error: ';' expected but 'else' found.
        else {test=false}
        ^AlgCocktailSort3:25: error: illegal start of simple expression
}
^AlgCocktailSort3:26: error: 'while' expected but '}' found.
} 
^